--- a/src/Cyotek.Demo.Scroll.csproj
+++ b/src/Cyotek.Demo.Scroll.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DemoScrollControl.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
