--- a/src/Cyotek.Demo.Scroll.csproj
+++ b/src/Cyotek.Demo.Scroll.csproj
@@ -61,16 +61,14 @@
     <Compile Include="DemoScrollControl.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MouseWheelMessageFilter.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="MouseWheelMessageFilter.cs" />
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WheelHelper.cs" />
